--- a/.luarc.json
+++ b/.luarc.json
@@ -12,16 +12,17 @@
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/cmp-path",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/cmp-tabnine",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/cmp_luasnip",
+        "/Users/ryan/.local/share/nvim/site/pack/packer/start/code_runner.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/Comment.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/dressing.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/friendly-snippets",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/gitsigns.nvim",
-        "/Users/ryan/.local/share/nvim/site/pack/packer/start/hop.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/impatient.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/indent-blankline.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/lspkind.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/lualine.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/LuaSnip",
+        "/Users/ryan/.local/share/nvim/site/pack/packer/start/markdown-preview.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/null-ls.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/nvim-autopairs",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/nvim-cmp",
@@ -33,18 +34,19 @@
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/nvim-treesitter",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/nvim-ts-rainbow",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/nvim-web-devicons",
+        "/Users/ryan/.local/share/nvim/site/pack/packer/start/onedark.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/packer.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/plenary.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/project.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/refactoring.nvim",
+        "/Users/ryan/.local/share/nvim/site/pack/packer/start/sniprun",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/symbols-outline.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/telescope-dap.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/telescope.nvim",
-        "/Users/ryan/.local/share/nvim/site/pack/packer/start/toggleterm.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/tokyonight.nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/which-key.nvim",
-        "/opt/homebrew/Cellar/neovim/0.8.0/share/nvim/runtime",
-        "/opt/homebrew/Cellar/neovim/0.8.0/lib/nvim",
+        "/opt/homebrew/Cellar/neovim/0.8.2/share/nvim/runtime",
+        "/opt/homebrew/Cellar/neovim/0.8.2/lib/nvim",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/cmp-buffer/after",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/cmp-cmdline/after",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/cmp-nvim-lsp/after",
@@ -52,5 +54,8 @@
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/cmp-tabnine/after",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/cmp_luasnip/after",
         "${3rd}/luassert/library"
+    ],
+    "diagnostics.disable": [
+        "need-check-nil"
     ]
 }
