--- a/.luarc.json
+++ b/.luarc.json
@@ -54,7 +54,8 @@
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/cmp-tabnine/after",
         "/Users/ryan/.local/share/nvim/site/pack/packer/start/cmp_luasnip/after",
         "${3rd}/luassert/library",
-        "${3rd}/luassert/library"
+        "${3rd}/luassert/library",
+        "${3rd}/luv/library"
     ],
     "diagnostics.disable": [
         "need-check-nil"
